# recommendation-service

./: .env.example  .gitignore  Dockerfile  Dockerfile.prod  compose.prod.yaml  compose.yaml  mypy.ini  pyproject.toml  schema.graphql  sonar-project.properties
src/: config.py  main.py
src/api/: cli.py  schema.py
src/dags/: recommendations_etl.py
src/data/: data_service.py  test_data_generator.py
src/models/: base_engine.py  product_similarity.py  recommendation_engine.py  text_to_product.py  user_recommendation_engine.py
src/plugins/: cache.py  graphql_queries.py  helpers.py
src/tests/: test_recommendation.py
src/utils/: query.py
storage/embeddings/: embeddings_20250416_171858.npy
storage/index/: faiss_index_20250416_171857.idx
storage/metadata/: metadata_20250416_171857.json  metadata_20250416_171858.json  metadata_20250416_173302.json  metadata_20250416_175334.json  metadata_20250416_175345.json  metadata_20250418_163508_product_engine.json  metadata_20250420_211412_product_engine.json  metadata_20250509_173649_product_engine.json  metadata_20250509_231907_product_engine.json  metadata_20250510_171703_product_engine.json  product_mapping_20250416_171858.pkl
